<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="sagar_koju">Sagar Koju</string>
    <string name="sagarkoju">SagarKoju</string>
    <string name="sample_image">Sample Image</string>
    <string name="card_view">Card View Example</string>
</resources>