<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/name1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:background="@drawable/shape"
        android:ems="1"
        android:hint="@string/enter_your_name" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editTextText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType="text"
        android:padding="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/edit2"
        android:id="@+id/textEmail"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_menu_gallery"
        app:endIconMode="clear_text"
        android:outlineProvider="bounds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        android:layout_height="wrap_content"
        android:outlineProvider="bounds"
        android:layout_below="@+id/textEmail"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/passwordEdit"
        app:startIconDrawable="@drawable/ic_menu_gallery"
        app:endIconMode="password_toggle"

        app:passwordToggleContentDescription="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/CustomElevatedButton"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/passwordEdit"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/center_view"
        android:text="@string/send"
        android:id="@+id/sendButton" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/center_view"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/CustomElevatedButton"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEdit"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/sendButton"
        android:text="@string/cancel" />

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:elevation="50dp"
        app:cardCornerRadius="40dp"
        android:layout_below="@+id/sendButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sagar"
                app:layout_constraintBottom_toTopOf="@id/Sagar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Sagar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/sagarkoju"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>